--- a/src/pug/project-home.pug
+++ b/src/pug/project-home.pug
@@ -17,7 +17,7 @@ block content
                         a(href='project-detail.html')
                             .row
                                 .col-lg-3.col-4.project__info
-                                    h6 PROJECT
+                                    h6.project__title PROJECT
                                     h4.project__name Pitesti
                                     ul
                                         li Sustainable
@@ -49,7 +49,7 @@ block content
                             | The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container-fluid#quotes-one
-                p.projects__quotes The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
+                p.project-home__quotes The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container.grid--wrap#grid--wrap-one
                 a(href='project-detail.html')
@@ -103,58 +103,7 @@ block content
                                 li Enviromental
 
             .container-fluid#quotes-two
-                p.projects__quotes.
+                p.project-home__quotes The long terms into environment. Improve the state and availability of desirable materials or conditions over.
 
-                    The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
-
-            .container.grid--wrap#grid--wrap-two
-                a(href='project-detail.html')
-                    .row.project__item
-                        .col-lg-3.col-4.project__info
-                            h6 PROJECT
-                            h4.project__name Pitesti
-                            ul
-                                li Sustainable
-                                li Builded
-                                li Enviromental
-                            h6.project__date 2015
-                            h6.project__country Romania
-                            h6.project__location.
-
-                                21 273, 92 sqm
-
-                        .col-lg-7.col-8
-                            picture
-                                source(srcset='img/images1.jpg', type='image/webp')
-                                img.img-fluid(src='img/images1.jpg' alt)
-                        .col-lg-2.project__item__place
-                            ul
-                                li Sustainable
-                                li Builded
-                                li Enviromental
-                a(href='project-detail.html')
-                    .row.project__item
-                        .col-lg-3.col-4.project__info
-                            h6 PROJECT
-                            h4.project__name Pitesti
-                            ul
-                                li Sustainable
-                                li Builded
-                                li Enviromental
-                            h6.project__date 2015
-                            h6.project__country Romania
-                            h6.project__location.
-
-                                21 273, 92 sqm
-
-                        .col-lg-7.col-8
-                            picture
-                                source(srcset='img/images1.jpg', type='image/webp')
-                                img.img-fluid(src='img/images1.jpg' alt)
-                        .col-lg-2.project__item__place
-                            ul
-                                li Sustainable
-                                li Builded
-                                li Enviromental
 
     include includes/footer.pug
