--- a/src/pug/writing.pug
+++ b/src/pug/writing.pug
@@ -4,6 +4,7 @@ block head-page
     script(src="js/animaciones-writing.min.js" defer)
     script(src="js/nav.min.js" defer)
 
+
 block content
     -ruta = ""
     include includes/header.pug
@@ -19,12 +20,12 @@ block content
                         .col-12.papers__item
                             a(href="writing-detail.html") 
                                 p 
-                                    sup ESSAY  
-                                    | I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and […]
+                                    sup ESSAY 
+                                    span […] 
+                                    | I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and 
+                                    span […]
 
-                                h3
-                                    sup READ MORE
-                                    | Parametric What?
+
 
 
 
