--- a/src/scss/core/_vars.scss
+++ b/src/scss/core/_vars.scss
@@ -23,16 +23,17 @@
     --secundaria-regular: "APKGaleria-regular";
     // --tercera-regular: "hanson-bold", sans-serif;
 
-    --txt-big: calc(84px + 100 * ((100vw - 1280px) / 1920)); //
-    --h1: calc(64px + 78 * ((100vw - 1280px) / 1920)); //
-    --xl: calc(44px + 52 * ((100vw - 1280px) / 1920)); //
-    --h1-1: calc(52px + 78 * ((100vw - 1280px) / 1920)); //
-    --h2: calc(36px + 60 * ((100vw - 1280px) / 1920)); //
-    --h3: calc(32px + 36 * ((100vw - 1280px) / 1920)); //
-    --h4: calc(24px + 10 * ((100vw - 1280px) / 1920)); //
-    --l: calc(20px + 10 * ((100vw - 1280px) / 1920)); //
-    --h5: calc(16px + 10 * ((100vw - 1280px) / 1920));
-    --h6: calc(10px + 20 * ((100vw - 1280px) / 1920));
+    --txt-big: calc(84px + 100 * ((100vw - 1920px) / 1280)); //
+    --h1: calc(90px + 78 * ((100vw - 1920px) / 1280)); //
+    --xl: calc(60px + 52 * ((100vw - 1920px) / 1280)); ///
+    --h1-1: calc(52px + 78 * ((100vw - 1920px) / 1280)); //
+    --h3: calc(44px + 36 * ((100vw - 1920px) / 1280)); ///
+    --h2: calc(40px + 60 * ((100vw - 1920px) / 1280)); ///
+    --ls: calc(30px + 10 * ((100vw - 1920px) / 1280)); ///
+    --h4: calc(24px + 10 * ((100vw - 1920px) / 1280)); ///
+    --l: calc(20px + 10 * ((100vw - 1920px) / 1280)); ///
+    --h5: calc(18px + 10 * ((100vw - 1920px) / 1280)); ///
+    --h6: calc(14px + 20 * ((100vw - 1920px) / 1280)); ///
 
     /// SECTIONS
     --paddingSection: 80px 40px;
