--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,5 +1,8 @@
 footer.footer
-    a.col-lg-4.col-12.footer--connect(href='connect.html')
-        h5 CONNECT
+    .col-lg-4.col-12.footer--connect(data-bs-toggle="modal", data-bs-target="#exampleModal")
+        button CONNECT
+
+
+include ../includes/modal-connect.pug
 
 
