--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -4,13 +4,17 @@
             padding: 0;
         }
 
+        h6:not(.project__title) {
+            font-size: var(--h5);
+        }
+
         ul {
             list-style: none;
             padding: 0;
             list-style-position: inside;
 
             li {
-                font-size: var(--h6);
+                font-size: var(--h5);
                 &::before {
                     content: "\2192";
                     margin-right: 0.5em;
@@ -20,7 +24,7 @@
 
         picture {
             width: 100%;
-            height: 450px;
+            height: calc(624px + 620 * ((100vw - 1920px) / 1280));
             display: block;
 
             img {
@@ -58,11 +62,11 @@
 
     &__name {
         margin-bottom: 0.3em;
+        font-size: var(--ls);
     }
 }
 
-
-.projects-home{
+.projects-home {
     &__card {
         margin-bottom: 3em;
         position: relative;
@@ -193,19 +197,19 @@
     }
 }
 
-@media(max-width:768px){
-.projects-home{
-    &__card {
-        margin-bottom: 1em;
-        align-items: flex-start !important;
-        &__images {
-            flex-basis: auto;
-            width: 100%;
-    
-            &__img {
-                height: calc(50px + 10 * ((100vw - 360px) / 768));
+@media (max-width: 768px) {
+    .projects-home {
+        &__card {
+            margin-bottom: 1em;
+            align-items: flex-start !important;
+            &__images {
+                flex-basis: auto;
+                width: 100%;
+
+                &__img {
+                    height: calc(50px + 10 * ((100vw - 360px) / 768));
+                }
             }
         }
     }
 }
-}    
