--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@ $container-max-widths: (
     md: 720px,
     lg: 960px,
     xl: 1200px,
-    xxl: 1760px,
+    xxl: 90%,
 );
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
