--- a/src/scss/pages/_writing.scss
+++ b/src/scss/pages/_writing.scss
@@ -6,10 +6,10 @@
             font-size: var(--h5);
             font-family: var(--primaria-regular);
             color: var(--gris);
+            margin-bottom: 4em;
         }
 
         &__item {
-            padding-top: 4em;
             transition: 0.3s ease-in-out all;
 
             &:nth-child(2) {
@@ -33,7 +33,6 @@
             a {
                 border-bottom: 1px solid var(--gris);
                 display: block;
-                padding-bottom: 1.4em;
             }
 
             p {
@@ -41,11 +40,17 @@
                 line-height: 1;
                 color: var(--gris);
                 font-family: var(--secundaria-regular);
-                margin-bottom: 0.5em;
                 transition: 0.3s ease-in-out all;
 
                 sup {
                     top: -2em;
+                    font-size: var(--l);
+                }
+
+                span {
+                    font-size: var(--xl);
+                    bottom: 20px;
+                    position: relative;
                 }
             }
 
@@ -74,7 +79,7 @@
     }
 }
 
-@media(max-width:768px) {
+@media (max-width: 768px) {
     .writing {
         .papers {
             padding: 2em 0;
