--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -2,7 +2,7 @@ header.header
     .container-fluid
         .row
             .col-6.col-lg-2.header--logo
-                a(href='../')
+                a(href='./')
                     img.img-fluid.logo-header(src='img/logo-linked-blanco.svg' alt)
 
             .col-lg-10.col-6.header--navegacion.d-flex
